; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit.c_llvm_shutdown.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit.c_llvm_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm_opt3_orc = common dso_local global i32* null, align 8
@llvm_opt0_orc = common dso_local global i32* null, align 8
@jit_profiling_support = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @llvm_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @llvm_shutdown(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** @llvm_opt3_orc, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32*, i32** @llvm_opt3_orc, align 8
  %9 = call i32 @LLVMOrcDisposeInstance(i32* %8)
  store i32* null, i32** @llvm_opt3_orc, align 8
  br label %10

10:                                               ; preds = %7, %2
  %11 = load i32*, i32** @llvm_opt0_orc, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32*, i32** @llvm_opt0_orc, align 8
  %15 = call i32 @LLVMOrcDisposeInstance(i32* %14)
  store i32* null, i32** @llvm_opt0_orc, align 8
  br label %16

16:                                               ; preds = %13, %10
  ret void
}

declare dso_local i32 @LLVMOrcDisposeInstance(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
